--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Amatic SC', cursive;
+}
+
 body {
     height: 100vh;
     width: 100vw;
@@ -17,10 +21,19 @@ body {
     grid-template-columns: repeat(4, 1fr);
 }
 
+.grid div {
+    font-size: 70px;
+    text-align: center;
+    font-weight: 700;
+}
+
 .scoreContainer {
+    display: inline-block;
     position: relative;
     color: #ffffff;
+    font-size: 50px;
+    font-weight: 700;
     height: 10vmin;
-    width: 10vmin;
+    width: 50vmin;
     text-transform: uppercase;
 }
